			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

06-Sep-2000
~~~~~~~~~~~
Moved 'Set Run Action' to the file menu (suggested by Ewan Mac Mahon), and
make using it bring up a dialog rather than a minibuffer. Hopefully it is now
easier to use!

Added much improved icons for executables and for applications without icons
of their own (Victor Liu See-le).

Allow '/' on the pinboard and panel (text wasn't displayed - spotted by
Tim Rowledge).

Bugfix: auto-scrolling didn't always stop when a drag ended.
Bugfix: creating a panel with the same name as a file in the current
	directory caused an error due to a throwback from when panels were
	directories (spotted by Ewan Mac Mahon).

30-Aug-2000 (Release 0.1.27)
~~~~~~~~~~~
Increased the distance you have to move the pointer to start a drag
slightly. Updated the manual.

Panel icons can now be moved from one side to the other by simply moving
over the gap in the middle. Previously, you had to jump over an icon on
the other side.

Left and right panels look better now. Also, they shrink if you add a top
or bottom panel to make room.

28-Aug-2000
~~~~~~~~~~~
Dragging on the panel background allows you to slide the bar back and
forth.

27-Aug-2000
~~~~~~~~~~~
Fixed a slight bug with lasso boxes, which could cause them to be drawn in
the wrong place. Install script no longer overwrites the default run
actions; if the user has changed them leave them alone!
(Martin Ward noted that symlinking to an executable would cause the
executable to be destroyed on upgrade!)

24-Aug-2000
~~~~~~~~~~~
More improvements to the event handling. Seems to be working again at
last!
Made the toolbar buttons slightly larger, and added a textual display
for 'Next Click' mode (eg 'Delete ... ?' when it's waiting for you to
click).
Moved the pinboard over to the new mouse binding code too.

21-Aug-2000
~~~~~~~~~~~
Started rewriting the event handling for filer windows to go through
the new code in bind.c, like the panel handling does.
